# CameraAPI

./: README.md  pyproject.toml
src/cameraapi/: __main__.py  _camera_interface.py  _depthcamera.py  _logging_config.py  _positionestimation.py  _realsense_camera.py  camera.py  depthcamera.py
src/cameraapi/config/: camera_2d_points.csv
src/cameraapi/examples/: camera_example.py  multi_camera_example.py
